# trdump

./: README.md  pyproject.toml
src/trdump/: __init__.py  _ws_debug.py  auth.py  cli.py  export.py  fetch.py  fx.py  monitor.py  probe.py
src/trdump/templates/: accounts.yaml  assets.yaml  transactions.yaml  transactions_basic.yaml
